@@ -1,3 +1,8 @@
+2007-10-11  Jonh Wendell <jwendell@gnome.org>
+
+	* data/Makefile.am
+	  - Make use of $destdir, thanks to Mark Howard. (Closes #485397)
+
 2007-10-10  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-tab.c,
